# OpenGL-Render-Engine

./: .gitignore  CMakeLists.txt  README.md  Render Engine.sln  Render Engine.vcxproj  Render Engine.vcxproj.filters  imgui.ini  program.cpp  vcpkg.json
Resource Files/: Thumbs.db
Resource Files/Helicopter/: AW101-2.mtl  AW101-Helicopter.mtl  AW101-Propellar.mtl  AW101.mtl
Resource Files/mario/: Credits.txt  Mario.mtl
Shaders/: blinn_phong.frag  compute_shader.cpp  compute_shader.h  fbo.frag  fbo.vert  fboPostProcess.frag  frag.glsl  light_source.frag  shader.cpp  shader.h  static_colour.frag  static_material.frag  static_material.vert
Shaders/Postprocess/: fisheye.comp  saturation.comp  vignette.comp
Source Files/Application/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  TimeManager.cpp  TimeManager.h  WindowManager.cpp  WindowManager.h
Source Files/Camera/: PlayerCamera.cpp  PlayerCamera.h  RenderSource.cpp  RenderSource.h  camera.cpp  camera.h
Source Files/Material/: Material.cpp  Material.h
Source Files/Postprocessing Effects/: Fisheye.cpp  Fisheye.h  PostprocessingEffect.cpp  PostprocessingEffect.h  PostprocessingEffects.h  Saturation.cpp  Saturation.h  Vignette.cpp  Vignette.h
Source Files/Shaders/: blinn_phong.frag  blinn_phong.vert  compute_shader.cpp  compute_shader.h  shader.cpp  shader.h  static_colour.vert  static_material.frag  static_material.vert
Source Files/Shaders/Postprocess/: saturation.glsl
Source Files/Utility/: BindingPoints.h  RandomFunctions.cpp  RandomFunctions.h  Vec2ui64.h
Source Files/Utility/Maths/: Ray.cpp  Ray.h
Source Files/World/: LightSource.cpp  LightSource.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
Source Files/World/Drawable/: Cube24.cpp  Cube24.h  Cube8.cpp  Cube8.h  Drawable.cpp  Drawable.h  ExternalModel.cpp  ExternalModel.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  PrimitiveModel.cpp  PrimitiveModel.h
Source Files/World/Drawable/Special/: FramebufferQuad.cpp  FramebufferQuad.h  Portal.cpp  Portal.h  PostprocessOverlay.cpp  PostprocessOverlay.h
